<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".main.FilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <Switch
            android:id="@+id/baslangicswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_tarih"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/bitisswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/switch_ikitarih"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tarihbuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:gravity="center">

        <Button
            android:id="@+id/baslangicbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#7B1FA2"
            android:drawableStart="@drawable/datebuttonicon"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/button_tarih"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bitisbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#7B1FA2"
            android:drawableStart="@drawable/datebuttonicon"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/button_bitis"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <TableLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/sahip_imgview3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_account_circle_black_24dp"
                android:contentDescription="@string/sahip" />

            <EditText
                android:id="@+id/sahipfet"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/sahip"
                android:inputType="textCapSentences"
                android:importantForAutofill="no"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/esgal_imgview3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_info_black_24dp"
                android:contentDescription="@string/esgal" />

            <EditText
                android:id="@+id/esgalfet"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start|top"
                android:hint="@string/esgal"
                android:inputType="textCapSentences"
                android:lines="5"
                android:importantForAutofill="no"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/tohum_imgview3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_bubble_chart_black_24dp"
                android:contentDescription="@string/tohum" />

            <Spinner
                android:id="@+id/filterspinner"
                android:layout_marginStart="5dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/koy_imgview3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_location_on_black_24dp"
                android:contentDescription="@string/koy" />

            <EditText
                android:id="@+id/koyfet"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/koy"
                android:inputType="textCapSentences"
                android:importantForAutofill="no" />

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/filterinfo"
        android:textAlignment="center"
        android:textStyle="italic" />

    <Button
        android:id="@+id/filtrele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#7B1FA2"
        android:text="@string/button_filter"
        android:textColor="@color/ic_launcher_background" />

</LinearLayout>