<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hayvan.YeniHayvan"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/cb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_date_range_black_24dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/sahip_imgview2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_account_circle_black_24dp" />

            <EditText
                android:id="@+id/sahipet"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/sahip"
                android:inputType="textCapSentences" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/esgal_imgview2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_info_black_24dp" />

            <EditText
                android:id="@+id/esgalet"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="start|top"
                android:hint="@string/esgal"
                android:inputType="textCapSentences"
                android:lines="5" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/tohum_imgview2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_bubble_chart_black_24dp" />

            <EditText
                android:id="@+id/tohumet"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/tohum"
                android:inputType="textCapSentences" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/koy_imgview2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_location_on_black_24dp" />

            <EditText
                android:id="@+id/koyet"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/koy"
                android:inputType="textCapSentences" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/kaydet"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="EKLE"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:icon="@drawable/ic_add_black_24dp" />

</LinearLayout>