<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".hayvan.HayvanDuzenle">

    <Button
        android:id="@+id/cdb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_date_range_black_24dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/sahip_imgview1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_account_circle_black_24dp" />

            <EditText
                android:id="@+id/sahipdet"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/sahip"
                android:inputType="textCapSentences" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/esgal_imgview1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_info_black_24dp" />


            <EditText
                android:id="@+id/esgaldet"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="start|top"
                android:hint="@string/esgal"
                android:inputType="textCapSentences"
                android:lines="5" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/tohum_imgview1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_bubble_chart_black_24dp" />

            <Spinner
                android:id="@+id/hayvaneditspinner"
                android:layout_marginStart="5dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/koy_imgview1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_location_on_black_24dp" />

            <EditText
                android:id="@+id/koydet"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/koy"
                android:inputType="textCapSentences" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/kayddet"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:padding="15dp"
        android:text="KAYDET"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>